Subiendo cambios de la barra superior

--- a/00-html-css/resultados.html
+++ b/00-html-css/resultados.html
@@ -23,7 +23,7 @@
                 <a href="">Salarios</a>
             </nav>
 
-            <div>
+            <div class="profile-section">
                 <a href="">Subir CV</a>
                 <img 
                 id = "photo_profile"
