--- a/00-html-css/index.html
+++ b/00-html-css/index.html
@@ -14,8 +14,8 @@
             <h1>DevJobs</h1>
 
             <nav>
-                <a href="">Inicio</a>
-                <a href="">Empleos</a>
+                <!--<a href="">Inicio</a> -->
+                <a href="resultados.html">Empleos</a>
             </nav>
 
             <div>
@@ -35,12 +35,14 @@
 
                 <p>Únete a la comunidad más grande de desarrolladores y Encuentra tu próxima oportunidad.</p>
 
-                <form>
+                <form role="search">
+                    <div>
                     <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-search"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" /><path d="M21 21l-6 -6" /></svg>
                     
                     <input type = "text" placeholder="Buscar empleos por título, habilidad o empresa">
                     
                     <button type="submit">Buscar</button>
+                    </div>
                 </form>
             </section>
 
