--- a/00-html-css/empleos.html
+++ b/00-html-css/empleos.html
@@ -101,9 +101,8 @@
       </section>
 
       <section>
-        <header class="resultados-busqueda">
-          <h2>Resultados de búsqueda</h2>
-        </header>
+        <h2 class="resultados-busqueda" >Resultados de búsqueda</h2>
+        
 
         <div class="jobs-listings">
           <article class="jobs-listing-card">
@@ -144,7 +143,7 @@
                 visualización. Se requiere conocimiento en SQL, Python y R.
               </p>
             </div>
-            <button>Aplicar</button>
+            <button class="button-apply-job">Aplicar</button>
           </article>
 
           <article class="jobs-listing-card">
@@ -164,7 +163,7 @@
                 usuario.
               </p>
             </div>
-            <button>Aplicar</button>
+            <button class="button-apply-job">Aplicar</button>
           </article>
 
           <article class="jobs-listing-card">
@@ -184,7 +183,7 @@
                 conocimiento en AWS, Azure o GCP.
               </p>
             </div>
-            <button>Aplicar</button>
+            <button class="button-apply-job">Aplicar</button>
           </article>
         </div>
 
@@ -206,12 +205,12 @@
               <path stroke="none" d="M0 0h24v24H0z" fill="none" />
               <path d="M15 6l-6 6l6 6" /></svg
           ></a>
-          <a href="">1</a>
-          <a href="">2</a>
-          <a href="">3</a>
-          <a href="">4</a>
-          <a href="">5</a>
-          <a href=""
+          <a class="is-active"  href="#">1</a>
+          <a href="#">2</a>
+          <a href="#">3</a>
+          <a href="#">4</a>
+          <a href="#">5</a>
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="24"
@@ -231,7 +230,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer style="padding-bottom: 200px;">
       <small>&copy; 2025 DevJobs. Todos los derechos reservados. </small>
     </footer>
   </body>
