--- a/00-html-css/index.html
+++ b/00-html-css/index.html
@@ -15,7 +15,7 @@
 
             <nav>
                 <!--<a href="">Inicio</a> -->
-                <a href="resultados.html">Empleos</a>
+                <a href="empleos.html">Empleos</a>
             </nav>
 
             <div>
