Implementación de diseños página empleos e implementación página detalle

--- a/00-html-css/detalle_ing.html
+++ b/00-html-css/detalle_ing.html
@@ -44,9 +44,35 @@
         </nav>
 
         <article>
-            
-            <h1>Ingeniero de Software Senior</h1>
+            <header>
+                <div>
+                <h1>Ingeniero de Software Senior</h1>
 
+                    <p>Tech Solutions Inc. Remoto</p>
+                </div>
+
+                <button>
+                    Aplicar ahora
+                </button>
+
+            </header>
+            
+            <section>
+
+                <h2>Descripción del puesto</h2>
+                <p>Tech Solutions Inc. está buscando..</p>
+
+            </section>
+
+            <section>
+                <h2>Responsabilidadess</h2>
+                <ul class="list">
+                    <li> <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="#0099ff"  stroke-width="1.75"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M9 12l2 2l4 -4" /></svg> Diseñar, desarrollar y mantener</li>
+                    <li> <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="#0099ff"  stroke-width="1.75"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M9 12l2 2l4 -4" /></svg> Colaborar con equipos de producto y diseño para definir y entregar nuevas características.</li>
+                    <li> <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="#0099ff"  stroke-width="1.75"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M9 12l2 2l4 -4" /></svg> Escribir código limpio, eficiente y bien documentado.</li>
+                    <li> <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="#0099ff"  stroke-width="1.75"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M9 12l2 2l4 -4" /></svg> Realizar revisiones de código y proporcionar retroalimentación constructiva a los miembros del equipo.</li>
+                </ul>
+            </section>
 
 
         </article>
