--- a/00-html-css/detalle_ing.html
+++ b/00-html-css/detalle_ing.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 
 <html lang="es">
+  <head>
+    <title>DebJobs - Detalle Ing en Software</title>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Detalle oferta Ingeniero en Software" />
 
-    <head>
-        <title>DebJobs - Detalle Ing en Software</title>
-        <meta charset="UTF-8"/>
-        <meta name="description" content="Detalle oferta Ingeniero en Software">
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
 
-        <link rel="stylesheet" href="./styles.css">
-
-    </head>
-
-    <body>
-        <header class="Upper-bar">
+  <body>
+    <header class="Upper-bar">
       <!--Barra superior-->
       <h1>DevJobs</h1>
 
@@ -37,52 +35,227 @@
     </header>
 
     <main>
-        <nav>
-            <a>Empleos</a>
-            <span>/</span>
-            <span>Ingeniero de Sofware Senior</span>
-        </nav>
+      <nav>
+        <a>Empleos</a>
+        <span>/</span>
+        <span>Ingeniero de Sofware Senior</span>
+      </nav>
 
-        <article>
-            <header>
-                <div>
-                <h1>Ingeniero de Software Senior</h1>
+      <article class="detail-Ing-Sofware">
+        <header>
+          <div>
+            <h1>Ingeniero de Software Senior</h1>
 
-                    <p>Tech Solutions Inc. Remoto</p>
-                </div>
+            <p>Tech Solutions Inc. Remoto</p>
+          </div>
 
-                <button>
-                    Aplicar ahora
-                </button>
+          <button>Aplicar ahora</button>
+        </header>
 
-            </header>
-            
-            <section>
+        <section>
+          <h2>Descripción del puesto</h2>
+          <p>
+            Tech Solutions Inc. está buscando un Ingeniero de Software Senior
+            altamente motivado y experimentado para unirse a nuestro equipo
+            remoto. El candidato ideal tendrá una sólida formación en desarrollo
+            de software, con experiencia en el diseño, desarrollo e
+            implementación de soluciones de software escalables y de alto
+            rendimiento. Como Ingeniero de Software Senior, usted será
+            responsable de liderar proyectos de desarrollo, mentorizar a
+            ingenieros junior y colaborar con equipos multifuncionales para
+            entregar productos de software de alta calidad.
+          </p>
+        </section>
 
-                <h2>Descripción del puesto</h2>
-                <p>Tech Solutions Inc. está buscando..</p>
+        <section>
+          <h2>Responsabilidadess</h2>
+          <ul class="list">
+            <li>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#0099ff"
+                stroke-width="1.75"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                <path d="M9 12l2 2l4 -4" />
+              </svg>
+              Diseñar, desarrollar y mantener
+            </li>
+            <li>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#0099ff"
+                stroke-width="1.75"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                <path d="M9 12l2 2l4 -4" />
+              </svg>
+              Colaborar con equipos de producto y diseño para definir y entregar
+              nuevas características.
+            </li>
+            <li>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#0099ff"
+                stroke-width="1.75"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                <path d="M9 12l2 2l4 -4" />
+              </svg>
+              Escribir código limpio, eficiente y bien documentado.
+            </li>
+            <li>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#0099ff"
+                stroke-width="1.75"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                <path d="M9 12l2 2l4 -4" />
+              </svg>
+              Realizar revisiones de código y proporcionar retroalimentación
+              constructiva a los miembros del equipo.
+            </li>
+          </ul>
+        </section>
 
-            </section>
+        <section>
+          <h2>Requisitos</h2>
+          <ul class="list">
+            <li>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#0099ff"
+                stroke-width="1.75"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                <path d="M9 12l2 2l4 -4" />
+              </svg>
+              Licenciatura en Informática o campo relacionado.
+            </li>
+            <li>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#0099ff"
+                stroke-width="1.75"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                <path d="M9 12l2 2l4 -4" />
+              </svg>
+              Mínimo de 5 años de experiencia en desarrollo de software.
+            </li>
+            <li>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#0099ff"
+                stroke-width="1.75"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                <path d="M9 12l2 2l4 -4" />
+              </svg>
+              Experiencia con frameworks de JavaScript (por ejemplo, React,
+              Angular, Vue.js).
+            </li>
+            <li>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#0099ff"
+                stroke-width="1.75"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                <path d="M9 12l2 2l4 -4" />
+              </svg>
+              Familiaridad con metodologías ágiles y herramientas de control de
+              versiones (por ejemplo git).
+            </li>
+          </ul>
+        </section>
 
-            <section>
-                <h2>Responsabilidadess</h2>
-                <ul class="list">
-                    <li> <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="#0099ff"  stroke-width="1.75"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M9 12l2 2l4 -4" /></svg> Diseñar, desarrollar y mantener</li>
-                    <li> <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="#0099ff"  stroke-width="1.75"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M9 12l2 2l4 -4" /></svg> Colaborar con equipos de producto y diseño para definir y entregar nuevas características.</li>
-                    <li> <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="#0099ff"  stroke-width="1.75"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M9 12l2 2l4 -4" /></svg> Escribir código limpio, eficiente y bien documentado.</li>
-                    <li> <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="#0099ff"  stroke-width="1.75"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M9 12l2 2l4 -4" /></svg> Realizar revisiones de código y proporcionar retroalimentación constructiva a los miembros del equipo.</li>
-                </ul>
-            </section>
-
-
-        </article>
-
+        <section>
+          <h2>Acerca de la empresa</h2>
+          <p>
+            Tech Solutions Inc. es una empresa de tecnología innovadora que se
+            centra en la creación de soluciones de software de vanguardia para
+            diversas industrias. Estamos comprometidos con el fomento de un
+            entorno de trabajo colaborativo e inclusivo donde cada empleado
+            pueda prosperar y crecer profesionalmente. Ofrecemos salarios
+            competitivos, beneficios integrales y oportunidades de desarrollo
+            profesional continuo.
+          </p>
+        </section>
+      </article>
     </main>
-    
-    <footer style="padding-bottom: 200px;">
+
+    <footer style="padding-bottom: 30px">
+      <div>
+        <button>Aplicar</button>
+      </div>
+
       <small>&copy; 2025 DevJobs. Todos los derechos reservados. </small>
     </footer>
-
-    </body>
-
+  </body>
 </html>
