Añadiendo código en fichero js

--- a/00-html-css/empleos.html
+++ b/00-html-css/empleos.html
@@ -11,7 +11,7 @@
     />
 
     <link rel="stylesheet" href="./styles.css" />
-    <script type="module" src=""></script>
+    <script type="module" src="./script.js"></script>
   </head>
 
   <body>
@@ -123,7 +123,7 @@
                 habilidades de comunicación.
               </p>
             </div>
-            <button class="button-apply-job" id="button-Ing-Soft">
+            <button class="button-apply-job" id="boton-importante">
               Aplicar
             </button>
           </article>
